--- a/index.html
+++ b/index.html
@@ -9,39 +9,25 @@
 <body>
 <div class="preloader">
     <div class="preloader_cnt">
-        <svg id="main" width="400" height="400" viewBox="0 0 222 107" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g opacity="0.5">
-            <line x1="60.764" y1="19.9024" x2="139" y2="19.9024" stroke="white" stroke-width="5"/>
-            <path d="M40.3708 67.4755H118.607" stroke="white" stroke-width="5"/>
-            <line y1="-2.5" x2="50.1147" y2="-2.5" transform="matrix(-0.414604 0.910002 -0.918868 -0.394565 60.7778 22)" stroke="white" stroke-width="5"/>
-            <line y1="-2.5" x2="50.1147" y2="-2.5" transform="matrix(-0.414604 0.910002 -0.918868 -0.394565 139 22.3955)" stroke="white" stroke-width="5"/>
-            </g>
-            <circle cx="40" cy="67" r="37.5" stroke="white" stroke-width="5"/>
-            <circle cx="182" cy="67" r="37.5" stroke="white" stroke-width="5"/>
-            <line x1="120.81" y1="4.27516" x2="181.81" y2="68.2752" stroke="white" stroke-width="5"/>
-            <line x1="60.6065" y1="18.0845" x2="122.607" y2="70.0845" stroke="white" stroke-width="5"/>
-            <line x1="61.5" y1="20" x2="61.5" y2="8" stroke="white" stroke-width="5"/>
-            <path d="M52 8C52 3.58172 55.5817 0 60 0H64C68.4183 0 72 3.58172 72 8H52Z" fill="#D9D9D9"/>
-            <rect x="102" y="3" width="21" height="6" fill="white"/>
-            <path class="one" d="M38.5 67.5L15.6326 42.3391" stroke="white"/>
-            <path class="two" d="M38.5 67L39 32" stroke="white"/>
-            <path class="three" d="M38.0908 102L38.5 67.5" stroke="white"/>
-            <path class="four" d="M39 67.5L4.98485 66.4998" stroke="white"/>
-            <line class="five" x1="38.635" y1="67.4876" x2="62.8186" y2="41.6583" stroke="white"/>
-            <path class="six" d="M38.5 67.5L14.5 90.5" stroke="white"/>
-            <path class="seven" d="M74.8324 67.7939L39 67.61" stroke="white"/>
-            <line class="eight" x1="62.6326" y1="93.3391" x2="38.6326" y2="67.3391" stroke="white"/>
-            <path class="nine" d="M180.515 67.5L157.648 42.3391" stroke="white"/>
-            <path class="ten" d="M180.515 67L181.015 32" stroke="white"/>
-            <path class="eleven" d="M180.106 102L180.515 67.5" stroke="white"/>
-            <path class="twelve" d="M181.015 67.5L147 66.4998" stroke="white"/>
-            <line class="thirteen" x1="180.65" y1="67.4876" x2="204.834" y2="41.6583" stroke="white"/>
-            <path class="fourteen" d="M180.515 67.5L156.515 90.5" stroke="white"/>
-            <path class="fifteen" d="M216.848 67.7939L181.015 67.61" stroke="white"/>
-            <line class="sixteen" x1="204.648" y1="93.3391" x2="180.648" y2="67.3391" stroke="white"/>
-            </svg>
-            
-
+        <svg id="main" width="400" height="400" viewBox="0 0 233 111" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect x="0.584889" y="1.60697" width="114.334" height="128.792" transform="matrix(1 0 -0.766044 0.642788 104.229 25.574)" stroke="white" stroke-width="5"/>
+            <line x1="217.479" y1="10.6745" x2="230.479" y2="109.675" stroke="white" stroke-width="5"/>
+            <path d="M194 8C194 6.34315 195.343 5 197 5H220V11H197C195.343 11 194 9.65685 194 8V8Z" fill="white"/>
+            <line x1="98.4663" y1="7.68374" x2="120.466" y2="109.684" stroke="white" stroke-width="3"/>
+            <path d="M89 4C89 1.79086 90.7909 0 93 0H110C111.657 0 113 1.34315 113 3V5C113 6.65685 111.657 8 110 8H93C90.7909 8 89 6.20914 89 4V4Z" fill="white"/>
+        </svg>
+        <div class="circle1">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="circle2">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
 </div>   
 </body>
